Switch to linux-syscalls lib

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,41 +1,16 @@
 [package]
 name = "linux-stat"
 version = "0.0.1"
-edition = "2021"
-
-[profile.dev.package.backtrace]
-opt-level = 3
+edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
 default = ["std"]
-std = []
-
-# architectures
-
-x86 = []
-x86_64 = []
-arm = []
-aarch64 = []
-mips = []
-mips64 = []
-powerpc = []
-powerpc64 = []
-riscv32 = []
-riscv64 = []
-m68k = []
-s390x = []
-
-[build-dependencies]
-cc = "1.0.79"
-tempfile = "3.5.0"
+std = ["linux-syscalls/std"]
 
 [target.'cfg(target_os = "linux")'.dev-dependencies]
 libc = { version = "0.2.144", default-features = false }
 
 [dependencies]
-
-[target.'cfg(target_os = "linux")'.dependencies]
-bitflags = "2.3.1"
-linux-errno = { git = "https://github.com/shurizzle/linux-errno.git" }
+linux-syscalls = { version = "0.1.1", default-features = false }
