--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,13 @@
 name = "linux-stat"
 version = "0.0.1"
 edition = "2018"
+metadata = { msrv = "1.46.0" }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
 default = ["std"]
-std = ["linux-syscalls/std"]
+std = ["linux-syscalls/std", "cstr_core/alloc"]
 linux_4_11 = []
 
 [target.'cfg(target_os = "linux")'.dev-dependencies]
@@ -15,3 +16,5 @@ libc = { version = "0.2.144", default-features = false }
 
 [dependencies]
 linux-syscalls = { version = "0.1.1", default-features = false }
+cstr_core = { version = "0.2.6", default-features = false }
+cty = { version = "0.2.2", default-features = false }
