--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,16 @@
 [package]
 name = "linux-stat"
-version = "0.0.1"
+version = "0.1.0"
 edition = "2018"
-metadata = { msrv = "1.46.0" }
+authors = ["shurizzle <shura1991@gmail.com>"]
+license = "MIT"
+description = "A pure Rust library that implements stat functions on linux with only syscalls."
+keywords = ["syscall", "no_std", "linux", "stat", "fs"]
+readme = "README.md"
+repository = "https://github.com/shurizzle/linux-stat"
+homepage = "https://github.com/shurizzle/linux-stat"
+documentation = "https://docs.rs/linux-stat"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
 default = ["std"]
