--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "linux-stat"
-version = "0.3.1"
-edition = "2018"
+version = "0.3.2"
+edition = "2021"
 authors = ["shurizzle <shura1991@gmail.com>"]
 license = "MIT"
 description = "A pure Rust library that implements stat functions on linux with only syscalls."
@@ -10,9 +10,7 @@ readme = "README.md"
 repository = "https://github.com/shurizzle/linux-stat"
 homepage = "https://github.com/shurizzle/linux-stat"
 documentation = "https://docs.rs/linux-stat"
-
-[package.metadata]
-msrv = "1.46.0"
+rust-version = "1.63.0"
 
 [package.metadata.docs.rs]
 default-target = "x86_64-unknown-linux-gnu"
@@ -36,10 +34,13 @@ std = ["linux-syscalls/std", "cstr_core/alloc"]
 linux_4_11 = []
 
 [target.'cfg(target_os = "linux")'.dev-dependencies]
-libc = { version = "0.2.144", default-features = false }
+libc = { version = "0.2.147", default-features = false }
+
+[target.'cfg(target_os = "linux")'.dependencies]
+linux-raw-sys = "0.4.3"
 
 [dependencies]
-linux-syscalls = { version = "0.1.1", default-features = false }
+linux-syscalls = { version = "0.2.0", default-features = false }
 
 [target.'cfg(all(unix, not(target_arch = "loongarch64")))'.dependencies]
 cstr_core = { version = "0.2.6", default-features = false }
