--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,14 +33,14 @@ default = ["std"]
 std = ["linux-syscalls/std", "cstr_core/alloc"]
 linux_4_11 = []
 
-[target.'cfg(target_os = "linux")'.dev-dependencies]
+[target.'cfg(any(target_os = "linux", target_os = "android"))'.dev-dependencies]
 libc = { version = "0.2.147", default-features = false }
 
-[target.'cfg(target_os = "linux")'.dependencies]
+[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
 linux-raw-sys = "0.4.3"
 
 [dependencies]
-linux-syscalls = { version = "0.2.0", default-features = false }
+linux-syscalls = { version = "0.3.0", default-features = false }
 
 [target.'cfg(all(unix, not(target_arch = "loongarch64")))'.dependencies]
 cstr_core = { version = "0.2.6", default-features = false }
